@@ -41,12 +41,9 @@ metadata:
     kubernetes.io/cluster-service: "true"
 data:
   kubernetes.yml: |-
-    - type: log
-      paths:
-        - /var/lib/docker/containers/*/*.log
-      json.message_key: log
-      json.keys_under_root: true
+    - type: docker
+      containers.ids:
+      - "*"
       processors:
         - add_kubernetes_metadata:
             in_cluster: true
-            namespace: ${POD_NAMESPACE}
